@@ -27,10 +27,6 @@ function ENT:Use(activator,caller)
 	self:Remove()
 end
 
-/*function ENT:PhysicsCollide( data, physobj )
-	if physobj and physobj:IsValid() then physobj:Sleep() end
-end*/
-
 function DarkRPCreateMoneyBag(pos, amount)
 	local moneybag = ents.Create("spawned_money")
 	moneybag:SetPos(pos)
