@@ -26,7 +26,7 @@ function ccValueCommand(ply, cmd, args)
 	end
 
 	local amount = math.floor(tonumber(args[1]))
-	if amount == GetGlobalInt(valuecmd.var) then return end
+	if amount == GetGlobalInt(valuecmd.var) and (not CfgVars[valuecmd.var] or (CfgVars[valuecmd.var] == amount)) then return end
 	if valuecmd.global then
 		DB.SaveGlobal(valuecmd.var, amount)
 	else
@@ -77,7 +77,7 @@ function ccToggleCommand(ply, cmd, args)
 	end
 
 	local toggle = tonumber(args[1])
-	if toggle == GetGlobalInt(togglecmd.var) then return end
+	if toggle == GetGlobalInt(togglecmd.var) and (not CfgVars[togglecmd.var] or (CfgVars[togglecmd.var] == toggle)) then return end
 
 	if not toggle or (toggle ~= 1 and toggle ~= 0) then
 		if ply:EntIndex() == 0 then
